--- a/.github/workflows/deploy-to-minikube-github-actions.yml
+++ b/.github/workflows/deploy-to-minikube-github-actions.yml
@@ -1,11 +1,7 @@
 name: Deploy to Minikube using GitHub Actions
 
-on:
-  push:
-    branches:
-      - main
-  workflow_dispatch:
-  
+on: [push]
+
 jobs:
   job1:
     runs-on: ubuntu-latest
@@ -29,6 +25,14 @@ jobs:
 
       - name: Deploy to minikube
         run: kubectl apply -f k8s-node-app.yaml
+
+      - name: Wait for pod to be ready
+        run: |
+          echo "Waiting for pod to be ready..."
+          kubectl wait --for=condition=Ready pod -l app=nodejs-app --timeout=60s
+
+      - name: Describe pods (debug if pod fails)
+        run: kubectl describe pods
 
       - name: Test service URLs
         run: |
